force-app/main/default/objects/SMS_Auto_Suspended_Account__c/SMS_Auto_Suspended_Account__c.object-meta.xml
<CustomObject>
    <label>SMS Auto Suspended Account</label>
    <nameField>
        <displayFormat>AS-{0000000000}</displayFormat>
        <label>SMS Auto Suspended Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Auto Suspended Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>