force-app/main/default/objects/SMS_Auto_Suspended_Account__c/fields/Auto_Suspend_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Auto_Suspend_Batch_ID__c</fullName>
    <description>Batch ID identifies the records that are part of a Auto Suspend Run</description>
    <label>Auto Suspend Batch ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>