force-app/main/default/objects/SMS_Auto_Suspended_Account__c/fields/Bright_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Bright_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bright Subscription</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipLabel>SMS Auto Suspended Accounts</relationshipLabel>
    <relationshipName>SMS_Auto_Suspended_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>