force-app/main/default/objects/SMS_Auto_Suspended_Account__c/fields/Bright_Subscription_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Bright_Subscription_Record_ID__c</fullName>
    <formula>Bright_Subscription__r.Id</formula>
    <label>Bright Subscription Record ID</label>
    <type>Text</type>
</CustomField>