force-app/main/default/objects/SMS_Auto_Suspended_Account__c/fields/Date_of_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Suspension__c</fullName>
    <label>Date of Suspension</label>
    <type>Date</type>
</CustomField>