force-app/main/default/objects/SMS_Auto_Suspended_Account__c/fields/Day_of_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Suspension__c</fullName>
    <label>Day of Suspension</label>
    <length>80</length>
    <type>Text</type>
</CustomField>