force-app/main/default/objects/SMS_Auto_Suspended_Account__c/fields/MRIS_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>MRIS_Subscription_ID__c</fullName>
    <label>MRIS Subscription ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>