force-app/main/default/objects/SMS_Auto_Suspended_Account__c/fields/Timed_Out__c.field-meta.xml
<CustomField>
    <fullName>Timed_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timed Out</label>
    <type>Checkbox</type>
</CustomField>