force-app/main/default/objects/SMS_Auto_Suspended_Account__c/fields/Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Due__c</fullName>
    <label>Total Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>