force-app/main/default/objects/SMS_Auto_Suspended_Account__c/fields/Zuora_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Account_Id__c</fullName>
    <label>Zuora Account Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>