force-app/main/default/objects/SMS_Auto_Suspended_Account__c/fields/Zuora_Suspend_Status__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Suspend_Status__c</fullName>
    <label>Zuora Suspend Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>