force-app/main/default/objects/SMS_Auto_Suspended_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Auto_Suspend_Batch_ID__c</columns>
    <columns>NAME</columns>
    <columns>MRIS_Subscription_ID__c</columns>
    <columns>Date_of_Suspension__c</columns>
    <columns>Day_of_Suspension__c</columns>
    <columns>Status__c</columns>
    <columns>Billing_Jurisdiction__c</columns>
    <columns>Service_Jurisdiction__c</columns>
    <columns>Status_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>