force-app/main/default/objects/SMS_Auto_Suspended_Account__c/listViews/Suspended_Today.listView-meta.xml
<ListView>
    <fullName>Suspended_Today</fullName>
    <columns>NAME</columns>
    <columns>Date_of_Suspension__c</columns>
    <columns>Status_Message__c</columns>
    <columns>Status__c</columns>
    <columns>Zuora_Suspend_Status__c</columns>
    <columns>Bright_Subscription__c</columns>
    <columns>Bright_Subscription_Record_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Suspended Today</label>
</ListView>